# FinOps

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api-core/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api-core/alembic/: env.py
apps/api-core/alembic/versions/: 0001_initial.py  0002_phase1_ingestion_news.py  0003_phase2_intel_runtime.py  0004_phase1_schema_versioning.py  0005_market_data_phase1.py
apps/api-core/src/finops_api/: __init__.py  config.py  db.py  dependencies.py  logging_config.py  main.py  models.py  tasks.py  worker.py
apps/api-core/src/finops_api/providers/: base.py  registry.py
apps/api-core/src/finops_api/repositories/: ingestion.py  ingestion_raw_payloads.py  intel.py  market.py  news_documents.py  signals.py  tool_call_audit.py
apps/api-core/src/finops_api/routers/: documents.py  health.py  ingestion.py  intel.py  market.py  signals.py  system.py
apps/api-core/src/finops_api/schemas/: common.py  documents.py  ingestion.py  intel.py  (+3 more)
apps/api-core/tests/: test_cache_and_rate_limit.py  test_documents_tenant_isolation_mock.py  test_health_and_context.py  test_ingestion_integration_mock_provider.py  test_intel_runtime.py  test_market_tenant_isolation_mock.py  test_signals_tenant_isolation_mock.py
apps/api-core/tests/providers/: test_alphavantage_adapter.py  test_alphavantage_mapper.py  test_provider_registry.py  test_serpapi_adapter.py  test_serpapi_mapper.py  test_serper_adapter.py  test_serper_mapper.py  test_tavily_adapter.py  test_tavily_mapper.py  test_twelvedata_adapter.py  test_twelvedata_mapper.py
(+63 files in other folders)
